--- a/src/assets/globals.css
+++ b/src/assets/globals.css
@@ -1,3 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=DM+Mono');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.title {
+  font-family: 'DM Mono', monospace;
+  font-weight: 500;
+  line-height: 48px;
+  text-transform: uppercase;
+  color: #ffffff;
+}
